--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -11,21 +11,23 @@
   <form [formGroup]="loginForm" (submit)="loginUser()" novalidate>
     <ion-item>
       <ion-label stacked>Email</ion-label>
-      <ion-input formControlName="email" type="email" placeholder="Your email address" [class.invalid]="!loginForm.controls.email.valid && blur">
+      <ion-input formControlName="email" type="email" placeholder="Your email address"
+        [class.invalid]="!loginForm.controls.email.valid && blur">
       </ion-input>
     </ion-item>
     <ion-item class="error-message" *ngIf="!loginForm.controls.email.valid &&
-     loginForm.controls.email.dirty">
+     loginForm.controls.email.touched">
       <p>Please enter a valid email address.</p>
     </ion-item>
 
     <ion-item>
       <ion-label stacked>Password</ion-label>
-      <ion-input formControlName="password" type="password" placeholder="Your password" [class.invalid]="!loginForm.controls.password.valid && blur">
+      <ion-input formControlName="password" type="password" placeholder="Your password"
+        [class.invalid]="!loginForm.controls.password.valid && blur">
       </ion-input>
     </ion-item>
     <ion-item class="error-message" *ngIf="!loginForm.controls.password.valid
-    && loginForm.controls.password.dirty">
+    && loginForm.controls.password.touched">
       <p>Your password needs more than 6 characters.</p>
     </ion-item>
 
