--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -8,6 +8,7 @@
 
 
 <ion-content padding>
+  <img src="assets/img/banner.jpg" />
   <form [formGroup]="loginForm" (submit)="loginUser()" novalidate>
     <ion-item>
       <ion-label stacked>Email</ion-label>
